Update Paramètres du site “settings”

--- a/public/data/settings.json
+++ b/public/data/settings.json
@@ -1,7 +1,7 @@
 {
-  "site_logo": "/img/logo.png",
+  "site_logo": "/img/logo.jpg",
   "site_name": "Smart Insert",
-  "slogan": "Votre carrière commence ici",
+  "slogan": "Votre tremplin vers la réussite professionnelle",
   "whatsapp_contact": "+22790143507",
   "email_contact": "abdoulazizeaboubacare@yahoo.fr"
 }
