Update Paramètres du site “settings”

--- a/public/data/settings.json
+++ b/public/data/settings.json
@@ -3,5 +3,5 @@
   "site_name": "Smart Insert",
   "slogan": "Votre tremplin vers la réussite professionnelle ",
   "whatsapp_contact": "+22790143507",
-  "email_contact": "smartinsert24@gmail.com"
+  "email_contact": "abdoulazizeaboubacare@yahoo.fr "
 }
